--- a/style/custom-class.css
+++ b/style/custom-class.css
@@ -3,14 +3,18 @@
     width: 1.65rem;
     height: 1.65rem;
   }
-
-  .md-text-xl {
-    font-size: 1.2rem;
+  .grid-cols-2-custom-product{
+    grid-template-columns: repeat(2, minmax(0,1fr));
   }
 }
 
 @media only screen and (min-width: 1280px) {
-  .grid-cols-3-custom {
+  .grid-cols-3-custom-product {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .px-16-custom-image-about-us {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 }
